@@ -106,6 +106,10 @@ BUG FIXES
     o	as.POSIXlt() now handles negative sub-second POSIXct times
 	properly - they were off by exactly one day. (Reported by
 	Daniel Murphy.)
+	
+    o	approxfun(), approx(), splinefun() and spline() could be
+	confused by x values that were different but so close as to
+	print identically. (PR#14377)
 
 
 
